--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "dev": "nodemon /server.js localhost 3000"
   },
   "author": "Eduardo",
   "license": "MIT",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
