--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "express-session": "^1.18.0"
+    "mysql2": "^3.9.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
