--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "password-validator": "^5.3.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
