--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Eduardo",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "password-validator": "^5.3.0",
