--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
     "password-validator": "^5.3.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
