--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-PORT=""
+# Port the server runs on
+SERVER_PORT=
+
+# Database Settings
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+
+# SMTP Server Settings
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
+MAIL_FROM=
