--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest --passWithNoTests --detectOpenHandles",
-    "dev": "nodemon /server.js localhost 3000"
+    "dev": "nodemon /server.js localhost 3000 --ignore "
   },
   "author": "Eduardo",
   "license": "MIT",
@@ -19,7 +19,6 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
