--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@ MAIL_PORT=
 MAIL_USER=
 MAIL_PASS=
 MAIL_FROM=
+
+# JWT secret key settings
+SECRET_KEY=
+
+# Bucket Settings
+BUCKET_ID=
+BUCKET_NAME=
+APP_KEY=
+KEY_ID=
