--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest --passWithNoTests --detectOpenHandles",
-    "dev": "nodemon /server.js localhost 3000"
+    "dev": "nodemon /server.js localhost 3000",
+    "start:dev": "nodemon server.js localhost 3000| pino-pretty"
   },
   "author": "Eduardo",
   "license": "MIT",
@@ -19,7 +20,9 @@
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
     "password-validator": "^5.3.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "pino": "^9.1.0",
+    "pino-pretty": "^11.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.1",
