--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
     "password-validator": "^5.3.0",
-    "validator": "^13.11.0",
     "pino": "^9.1.0",
-    "pino-pretty": "^11.0.0"
+    "pino-pretty": "^11.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
